feat: modified vscode sample styles to look more like vscode

--- a/sample-web-component/vscode-dark-theme.css
+++ b/sample-web-component/vscode-dark-theme.css
@@ -12,4 +12,5 @@
   --vscode-panel-border: #cecece;
   --vscode-dropdown-background: #3c3c3c;
   --vscode-list-hoverBackground: #2f3943;
+  --vscode-focusBorder: rgba(14, 99, 156, 0.8);
 }
