--- a/sample-web-component/vscode-theme.css
+++ b/sample-web-component/vscode-theme.css
@@ -104,9 +104,9 @@
   --sapElement_LineHeight: 2.75rem;
   --sapElement_Height: 2.25rem;
   --sapElement_BorderWidth: .0625rem;
-  --sapElement_BorderCornerRadius: .25rem;
-  --sapElement_Compact_LineHeight: 2rem;
-  --sapElement_Compact_Height: 1.625rem;
+  --sapElement_BorderCornerRadius: 0;
+  --sapElement_Compact_LineHeight: 5rem;
+  --sapElement_Compact_Height: 2.625rem;
   --sapElement_Condensed_LineHeight: 1.5rem;
   --sapElement_Condensed_Height: 1.375rem;
   --sapContent_LineHeight: 1.4;
@@ -120,8 +120,8 @@
   --sapContent_ImagePlaceholderForegroundColor: #29313a;
   --sapContent_RatedColor: #ffc847;
   --sapContent_UnratedColor: #8696a9;
-  --sapContent_FocusColor: #fff;
-  --sapContent_FocusStyle: dotted;
+  --sapContent_FocusColor: var(--vscode-focusBorder);
+  --sapContent_FocusStyle: solid;
   --sapContent_FocusWidth: .0625rem;
   --sapContent_ContrastFocusColor: #000;
   --sapContent_ShadowColor: #000;
@@ -187,7 +187,7 @@
   --sapShell_Navigation_Active_TextColor: #fafafa;
   --sapShell_Shadow: 0 0 0.5rem 0 rgba(0,0,0,0.8), inset 0 -0.0625rem 0 0 rgba(255,255,255,0.2);
   --sapButton_BorderWidth: .0625rem;
-  --sapButton_BorderCornerRadius: .25rem;
+  --sapButton_BorderCornerRadius: 0;
   --sapButton_Background: var(--vscode-button-background, #0e639c);
   --sapButton_BorderColor: var(--vscode-button-background, #0e639c);
   --sapButton_TextColor: #91c8f6;
@@ -310,8 +310,8 @@
   --sapField_PlaceholderTextColor: #b8bec1;
   --sapField_BorderColor: var(--vscode-panel-border,#cecece);
   --sapField_HelpBackground: #29313a;
-  --sapField_BorderWidth: .0625rem;
-  --sapField_BorderCornerRadius: .125rem;
+  --sapField_BorderWidth: 0;
+  --sapField_BorderCornerRadius: 0;
   --sapField_Hover_Background: #29313a;
   --sapField_Hover_BorderColor: #91c8f6;
   --sapField_Hover_HelpBackground: #062e4f;
