feat: added more vscode styles

--- a/sample-web-component/vscode-dark-theme.css
+++ b/sample-web-component/vscode-dark-theme.css
@@ -13,4 +13,6 @@
   --vscode-dropdown-background: #3c3c3c;
   --vscode-list-hoverBackground: #2f3943;
   --vscode-focusBorder: rgba(14, 99, 156, 0.8);
+  --vscode-menu-selectionBackground: #2f3943;
+  --vscode-list-selectionBackground: #2f3943;
 }
