--- a/sample-web-component/vscode-theme.css
+++ b/sample-web-component/vscode-theme.css
@@ -7,6 +7,7 @@
 
 .sapThemeMetaData-Base-baseLib{background-image: url('data:text/plain;utf-8,{"Path": "Base.baseLib.sap_fiori_3_dark.css_variables", "PathPattern": "/%frameworkId%/%libId%/%themeId%/%fileId%.css", "Extends": ["sap_fiori_3","sap_base_fiori","baseTheme"], "Tags": ["Fiori_3","DarkColorScheme"], "FallbackThemeId": "sap_fiori_3", "Version": { "Build":"11.1.24.20201118150206", "Source": "11.1.24", "Engine": "1.51.0"}}');}
 :root {
+  --inquirerGuiCheckboxSize: large;
   --sapBrandColor: #91c8f6;
   --sapHighlightColor: #91c8f6;
   --sapBaseColor: var(--vscode-foreground, #cccccc);
